# ComputerVision

doc/: description.md  report.md
src/: CMakeLists.txt  Sift.cpp  camera.cpp  dual_example_main.cpp  epipolar_geo.cpp  epipolar_geo.h  filters.cc  filters.h  main.cpp  main_sift.cpp  sift.cc  sift.h
src/tests/: vector_test.cc
